fix : 전체적인 수정 및 쿼리 최적화