@@ -12,16 +12,14 @@ import gangdong.diet.domain.nutrient.dto.NutrientRequest;
 import gangdong.diet.domain.nutrient.entity.Nutrient;
 import gangdong.diet.domain.nutrient.repository.NutrientRepository;
 import gangdong.diet.domain.nutrient.service.NutrientService;
-import gangdong.diet.domain.post.dto.PostRequest;
-import gangdong.diet.domain.post.dto.PostResponse;
-import gangdong.diet.domain.post.entity.Post;
-import gangdong.diet.domain.post.entity.PostImage;
-import gangdong.diet.domain.post.entity.PostIngredient;
-import gangdong.diet.domain.post.entity.PostNutrient;
+import gangdong.diet.domain.post.dto.*;
+import gangdong.diet.domain.post.entity.*;
 import gangdong.diet.domain.post.repository.PostImageRepository;
 import gangdong.diet.domain.post.repository.PostIngredientRepository;
 import gangdong.diet.domain.post.repository.PostNutrientRepository;
 import gangdong.diet.domain.post.repository.PostRepository;
+import gangdong.diet.domain.review.entity.Review;
+import gangdong.diet.domain.scrap.entity.Scrap;
 import gangdong.diet.domain.scrap.repository.ScrapRepository;
 import gangdong.diet.domain.tag.service.TagService;
 import gangdong.diet.global.auth.MemberDetails;
@@ -60,7 +58,7 @@ public class PostServiceImpl implements PostService{
 
     @Transactional(readOnly = true)
     @Override
-    public Slice<PostResponse> findByKeywords(Long cursorId, String keywords, int size) {
+    public Slice<PostSearchResponse> findByKeywords(Long cursorId, String keywords, int size) {
 
         cursorId = cursorId == null ? 0 : cursorId;
 
@@ -77,11 +75,11 @@ public class PostServiceImpl implements PostService{
         }
 
         // Repository 호출
-        List<Post> recipeResults = postRepository.findByRecipeName(cursorId, finalKeywords, size);
-        List<Post> ingredientResults = postRepository.findByIngredient(cursorId, finalKeywords, size);
+        List<PostSearchResponse> recipeResults = postRepository.findByRecipeName(cursorId, finalKeywords, size);
+        List<PostSearchResponse> ingredientResults = postRepository.findByIngredient(cursorId, finalKeywords, size);
 
         // 합친 후 중복 제거
-        Set<Post> mergedResultsSet = new LinkedHashSet<>(recipeResults);
+        Set<PostSearchResponse> mergedResultsSet = new LinkedHashSet<>(recipeResults);
         mergedResultsSet.addAll(ingredientResults);
 
         Member member = isLoggedIn();
@@ -95,10 +93,11 @@ public class PostServiceImpl implements PostService{
         }
 
 
-        List<PostResponse> finalResults = mergedResultsSet.stream().map(p -> PostResponse.builder().post(p)
-                        .isScrapped(scrappedPostIds.contains(p.getId()))
-                        .build())
-                .toList();
+        List<PostSearchResponse> finalResults = mergedResultsSet.stream().map(psr -> {
+                    psr.setIsScrapped(scrappedPostIds.contains(psr.getId()));
+                    return psr;
+                })
+                .collect(Collectors.toList());
 
         // 페이징 처리 및 Slice 반환
         boolean hasNext = finalResults.size() > size;
@@ -111,8 +110,8 @@ public class PostServiceImpl implements PostService{
 
     @Transactional(readOnly = true)
     @Override
-    public Slice<PostResponse> findAllPosts(Long cursorId, int size) {
-        List<Post> posts = postRepository.findByRecipeName(cursorId, null, size);
+    public Slice<PostSearchResponse> findAllPosts(Long cursorId, int size) {
+        List<PostSearchResponse> posts = postRepository.findByRecipeName(cursorId, null, size);
 
         Member member = isLoggedIn();
 
@@ -125,12 +124,18 @@ public class PostServiceImpl implements PostService{
         }
 
 
-        List<PostResponse> finalResults = posts.stream()
-                .map(post -> PostResponse.builder()
-                        .post(post)
-                        .isScrapped(scrappedPostIds.contains(post.getId()))
-                        .build())
-                .toList();
+//        List<PostSearchResponse> finalResults = posts.stream()
+//                .map(post -> PostSearchResponse.builder()
+//                        .post(post)
+//                        .isScrapped(scrappedPostIds.contains(post.getId()))
+//                        .build())
+//                .toList();
+        List<PostSearchResponse> finalResults = posts.stream().map(post -> {
+                    post.setIsScrapped(scrappedPostIds.contains(post.getId()));
+                    return post;
+                })
+                .collect(Collectors.toList());
+
 
         boolean hasNext = finalResults.size() > size;
         if (hasNext) {
@@ -143,20 +148,39 @@ public class PostServiceImpl implements PostService{
     @Transactional(readOnly = true)
     @Override
     public PostResponse getOnePost(Long postId) {
-        Post post = postRepository.findById(postId).orElseThrow(() -> new ApiException(ErrorCode.POST_NOT_FOUND));
+        PostResponse postResponse = postRepository.getOnePost(postId).orElseThrow(() -> new ApiException(ErrorCode.POST_NOT_FOUND));
+
+        List<PostIngredient> ingredients = postRepository.getIngredients(postId);
+        List<PostNutrient> nutrients = postRepository.getNutrients(postId);
+        List<PostTag> postTag = postRepository.getPostTags(postId);
+        List<PostImage> postImage = postRepository.getPostImages(postId);
+        List<Review> reviews = postRepository.getReviews(postId);
+        List<Scrap> scraps = postRepository.getScraps(postId);
+
+        postResponse.getIngredients().addAll(ingredients.stream()
+                .map(i -> PostIngredientResponse.builder().postIngredient(i).build())
+                .toList());
+        postResponse.getNutrients().addAll(nutrients.stream()
+                .map(n -> PostNutrientResponse.builder().postNutrient(n).build())
+                .toList());
+        postResponse.getTagName().addAll(postTag.stream().map(pt -> pt.getTag().getName()).toList());
+        postResponse.getPostImages().addAll(postImage.stream()
+                .map(pi -> PostImageResponse.builder().postImage(pi).build())
+                .toList());
+        postResponse.setReview(reviews);
+        postResponse.setScrapCount(scraps.size());
 
         Member member = isLoggedIn();
         Boolean isScrapped = member == null ? false : scrapRepository.existsByMemberIdAndPostId(member.getId(), postId);
 
-        return PostResponse.builder()
-                .post(post)
-                .isScrapped(isScrapped)
-                .build();
+        postResponse.setIsScrapped(isScrapped);
+
+        return postResponse;
     }
 
     @Transactional
     @Override
-    public Long savePost(PostRequest postRequest, MultipartFile thumbnail, List<MultipartFile> postImagesRequest, MemberDetails memberDetails) {
+    public Long savePost(PostRequest postRequest, MultipartFile thumbnail, List<MultipartFile> postImages, MemberDetails memberDetails) {
 
         Member member = memberRepository.findByMemberEmail(memberDetails.getUsername())
                 .orElseThrow(() -> new ApiException(ErrorCode.MEMBER_NOT_FOUND));
@@ -164,6 +188,9 @@ public class PostServiceImpl implements PostService{
         Post post = Post.builder()
                 .title(postRequest.getTitle())
                 .content(postRequest.getContent())
+                .cookingTime(postRequest.getCookingTime())
+                .calories(postRequest.getCalories())
+                .servings(postRequest.getServings())
                 .youtubeUrl(postRequest.getYoutubeUrl())
                 .isApproved(false)
                 .member(member)
@@ -183,14 +210,50 @@ public class PostServiceImpl implements PostService{
         nutrientService.registerNutrient(postRequest.getNutrients(), post);
         tagService.registerTags(postRequest.getTags(), post);
 
-        try {
-            List<String> imageUrls = s3ImageService.uploadFile(postImagesRequest, "post/" + post.getId() + "/");
-            List<PostImage> postImages = imageUrls.stream()
-                    .map(url -> PostImage.builder().imageUrl(url).post(post).build())
-                    .collect(Collectors.toList());
-            post.getPostImages().addAll(postImages);
-        } catch (Exception e) {
-            throw new ApiException(ErrorCode.FILE_UPLOAD_ERROR);
+//        try {
+//            List<String> imageUrls = s3ImageService.uploadFile(postImagesRequest, "post/" + post.getId() + "/");
+//            List<PostImage> postImages = imageUrls.stream()
+//                    .map(url -> PostImage.builder().imageUrl(url).post(post).build())
+//                    .collect(Collectors.toList());
+//            post.getPostImages().addAll(postImages);
+//        } catch (Exception e) {
+//
+//            throw new ApiException(ErrorCode.FILE_UPLOAD_ERROR);
+//        }
+
+        // 이미지 업로드
+        if (postImages != null && !postImages.isEmpty()) {
+            List<String> uploadedImageUrls = new ArrayList<>();
+            try {
+                List<PostImage> postImageList = new ArrayList<>();
+
+                for (int i = 0; i < postImages.size(); i++) {
+                    MultipartFile image = postImages.get(i);
+                    String description = postRequest.getDescriptions().get(i); // 매칭되는 설명 가져오기
+
+                    // 이미지 업로드
+                    String imageUrl = s3ImageService.uploadFile(image, "post/" + post.getId() + "/");
+                    uploadedImageUrls.add(imageUrl);
+
+                    // PostImage 객체 생성
+                    PostImage postImage = PostImage.builder()
+                            .imageUrl(imageUrl)
+                            .description(description) // 매칭된 설명 추가
+                            .post(post)
+                            .build();
+                    postImageList.add(postImage);
+                }
+
+                // Post에 PostImage 리스트 추가
+                post.getPostImages().addAll(postImageList);
+
+            } catch (Exception e) {
+                // 실패한 경우 업로드된 이미지 삭제
+                if (!uploadedImageUrls.isEmpty()) {
+                    s3ImageService.cleanupUploadedFiles(uploadedImageUrls);
+                }
+                throw new ApiException(ErrorCode.FILE_UPLOAD_ERROR);
+            }
         }
 
         return post.getId();
@@ -198,7 +261,7 @@ public class PostServiceImpl implements PostService{
 
     @Transactional
     @Override
-    public PostResponse updatePost(Long postId, PostRequest postRequest, MultipartFile thumbnail, List<MultipartFile> postImagesRequest, MemberDetails memberDetails) {
+    public PostResponse updatePost(Long postId, PostRequest postRequest, MultipartFile thumbnail, List<MultipartFile> postImages, MemberDetails memberDetails) {
         Member member = memberRepository.findByMemberEmail(memberDetails.getUsername())
                 .orElseThrow(() -> new ApiException(ErrorCode.MEMBER_NOT_FOUND));
 
@@ -212,11 +275,15 @@ public class PostServiceImpl implements PostService{
         // 게시물 기본 정보 수정
         post.setTitle(postRequest.getTitle());
         post.setContent(postRequest.getContent());
+        post.setCookingTime(postRequest.getCookingTime());
+        post.setCalories(postRequest.getCalories());
+        post.setServings(postRequest.getServings());
         post.setYoutubeUrl(postRequest.getYoutubeUrl());
 
         // 썸네일 업데이트
         if (thumbnail != null) {
             try {
+                s3ImageService.deleteFile(post.getThumbnailUrl());
                 post.setThumbnailUrl(s3ImageService.uploadFile(thumbnail, "post/" + post.getId() + "/"));
             } catch (Exception e) {
                 throw new ApiException(ErrorCode.THUMBNAIL_UPLOAD_FAIL);
@@ -231,20 +298,50 @@ public class PostServiceImpl implements PostService{
         post.getNutrients().clear();
         nutrientService.registerNutrient(postRequest.getNutrients(), post);
 
+        // 태그 업데이트
         post.getPostTags().clear();
         tagService.registerTags(postRequest.getTags(), post);
 
         // 이미지 업데이트
-        try {
+        if (postImages != null && !postImages.isEmpty()) {
+            List<String> uploadedImageUrls = new ArrayList<>();
+            try {
+                post.getPostImages().forEach(postImage -> s3ImageService.deleteFile(postImage.getImageUrl()));
+                post.getPostImages().clear();
+
+                List<PostImage> postImageEntities = new ArrayList<>();
+
+                for (int i = 0; i < postImages.size(); i++) {
+                    MultipartFile image = postImages.get(i);
+                    String description = postRequest.getDescriptions().get(i); // 매칭되는 설명 가져오기
+
+                    // 이미지 업로드
+                    String imageUrl = s3ImageService.uploadFile(image, "post/" + post.getId() + "/");
+                    uploadedImageUrls.add(imageUrl);
+
+                    // PostImage 객체 생성
+                    PostImage postImage = PostImage.builder()
+                            .imageUrl(imageUrl)
+                            .description(description) // 매칭된 설명 추가
+                            .post(post)
+                            .build();
+                    postImageEntities.add(postImage);
+                }
+
+                // Post에 PostImage 리스트 추가
+                post.getPostImages().addAll(postImageEntities);
+
+            } catch (Exception e) {
+                // 실패한 경우 업로드된 이미지 삭제
+                if (!uploadedImageUrls.isEmpty()) {
+                    s3ImageService.cleanupUploadedFiles(uploadedImageUrls);
+                }
+                throw new ApiException(ErrorCode.FILE_UPLOAD_ERROR);
+            }
+        }
+        else {
             post.getPostImages().forEach(postImage -> s3ImageService.deleteFile(postImage.getImageUrl()));
             post.getPostImages().clear();
-            List<String> imageUrls = s3ImageService.uploadFile(postImagesRequest, "post/" + post.getId() + "/");
-            List<PostImage> postImages = imageUrls.stream()
-                    .map(url -> PostImage.builder().imageUrl(url).post(post).build())
-                    .collect(Collectors.toList());
-            post.getPostImages().addAll(postImages);
-        } catch (Exception e) {
-            throw new ApiException(ErrorCode.FILE_UPLOAD_ERROR);
         }
 
         Boolean isScrapped = member == null ? false : scrapRepository.existsByMemberIdAndPostId(member.getId(), postId);
@@ -257,8 +354,21 @@ public class PostServiceImpl implements PostService{
 
     @Transactional
     @Override
-    public void deletePost(Long id) { // TODO 사용자 검증 추가
-        postRepository.deleteById(id);
+    public void deletePost(Long postId, MemberDetails memberDetails) { // TODO 사용자 검증 추가
+        Member member = memberRepository.findByMemberEmail(memberDetails.getUsername())
+                .orElseThrow(() -> new ApiException(ErrorCode.MEMBER_NOT_FOUND));
+
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new ApiException(ErrorCode.POST_NOT_FOUND));
+
+        if (!post.getMember().getId().equals(member.getId())) {
+            throw new ApiException(ErrorCode.UNAUTHORIZED_ACTION);
+        }
+
+        s3ImageService.deleteFile(post.getThumbnailUrl());
+        post.getPostImages().forEach(postImage -> s3ImageService.deleteFile(postImage.getImageUrl()));
+
+        postRepository.deleteById(postId);
     }
 
     private Member isLoggedIn() { //TODO 유저 합쳐지면 이거 바꿔야함   * 그리고 이거 고민인게 이렇게 스크랩 한 게시물 찾는게 별로 안 좋은것 같음.
@@ -272,9 +382,9 @@ public class PostServiceImpl implements PostService{
         return null; // 인증되지 않았을 경우
     }
 
-    private List<Long> isScrapped(Collection<Post> posts, Long memberId) {
+    private List<Long> isScrapped(Collection<PostSearchResponse> posts, Long memberId) {
 
-        List<Long> postIds = posts.stream().map(Post::getId).toList();
+        List<Long> postIds = posts.stream().map(PostSearchResponse::getId).toList();
         List<Long> scrappedPostIds = scrapRepository.findScrappedPostIds(memberId, postIds);
 
         return scrappedPostIds;
